-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.0 RC
-
Android 8.1
-
-
2afe4a1a074096a3a6476aae21e732c418717da7 (qt/qtbase/5.12) 6191249259719dee6f8f6eb42289e0582f1c02bc (qt/qtbase/5.12.1)
When suspending an application after the keyboard has been shown it will hang on resuming. This happens with both widgets and QML apps. Steps are:
- Start application
- Show the keyboard
- Press the apps list button
- Click back on the application
- Note it is unresponsive
- duplicates
-
QTBUG-72549 Android: unresponsive app after showing keyboard, suspend, resume
-
- Closed
-
For Gerrit Dashboard: QTBUG-72101 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
246816,2 | Android: Don't use blocking queued when suspending the application | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |
249055,3 | Use the AndroidDeadlockProtector when using a blockingqueued connection | 5.12.1 | qt/qtbase | Status: MERGED | +2 | 0 |